day 12 - try mermaid to visualize graphs

--- a/notebooks/day12/puzzle.ipynb
+++ b/notebooks/day12/puzzle.ipynb
@@ -76,6 +76,29 @@
      "language": "fsharp"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.DotNet.Interactive.ExtensionLab, 1.0.0-beta.21606.1</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#r \"nuget: Microsoft.DotNet.Interactive.ExtensionLab,1.0.0-beta.21606.1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
    "outputs": [],
    "source": [
     "type Node = \n",
@@ -97,6 +120,7 @@
    "outputs": [],
    "source": [
     "module Formatting =\n",
+    "    open Microsoft.DotNet.Interactive.ExtensionLab\n",
     "    let formatNode node =\n",
     "        match node with\n",
     "        | Start -> \"START\"\n",
@@ -109,7 +133,28 @@
     "    let displayNodePair = formatNodePair >> display\n",
     "    let formatPath list = \n",
     "        String.Join(\" → \", (list |> List.map (formatNode)))\n",
-    "    let displayPath = formatPath >> display"
+    "    let displayPath = formatPath >> display\n",
+    "    let displayGraph (adjacencies: (Node*Node)[]) = \n",
+    "        let normalized = \n",
+    "            adjacencies \n",
+    "            |> Array.map (fun (from, ``to``) -> Set.empty.Add(from).Add(``to``))\n",
+    "            |> Array.distinct\n",
+    "            |> Array.map (List.ofSeq)\n",
+    "            |> Array.choose (function | [x; y] -> Some (x,y) | _ -> None)\n",
+    "        let mermaidNode node =\n",
+    "            match node with\n",
+    "            | Start -> \"START\"\n",
+    "            | End -> \"END\"\n",
+    "            | Large x -> $\"{x}{{{x}}}\"\n",
+    "            | Small x -> $\"{x}({x})\"\n",
+    "        let mermaidLines = \n",
+    "            normalized\n",
+    "            |> Array.map (fun (x,y) -> $\"    {mermaidNode x} --- {mermaidNode y}\")\n",
+    "            |> Array.append [|\"graph TD\"|]\n",
+    "        String.Join(\"\\n\", mermaidLines)\n",
+    "        |> MermaidMarkdown\n",
+    "        |> display\n",
+    "        |> ignore"
    ]
   },
   {
@@ -164,6 +209,169 @@
     "\n",
     "\"All adjacencies:\" |> display\n",
     "sampleAdjacency |> Array.map Formatting.formatNodePair |> display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"background-color:white;\">\r\n",
+       "<script type=\"text/javascript\">\r\n",
+       "\r\n",
+       "loadMermaid_337403e14b224e1da2ee1318b8284b7d = () => {\r\n",
+       " \r\n",
+       "        (require.config({ 'paths': { 'context': '1.0.252001', 'mermaidUri' : 'https://colombod.github.io/dotnet-interactive-cdn/extensionlab/1.0.252001/mermaid/mermaidapi', 'urlArgs': 'cacheBuster=c1495c2b464f430e8335b80d754676c9' }}) || require)(['mermaidUri'], (mermaid) => {\r\n",
+       "\r\n",
+       "            let renderTarget = document.getElementById('337403e14b224e1da2ee1318b8284b7d');\r\n",
+       "            mermaid.render( \r\n",
+       "                'mermaid_337403e14b224e1da2ee1318b8284b7d', \r\n",
+       "                `graph TD\n",
+       "    START --- A{A}\n",
+       "    START --- b(b)\n",
+       "    A{A} --- c(c)\n",
+       "    A{A} --- b(b)\n",
+       "    b(b) --- d(d)\n",
+       "    END --- A{A}\n",
+       "    END --- b(b)`, \r\n",
+       "                g => {\r\n",
+       "                    renderTarget.innerHTML = g \r\n",
+       "                });\r\n",
+       "        },\r\n",
+       "        (error) => {\r\n",
+       "            console.log(error);\r\n",
+       "        });\r\n",
+       "}\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
+       "        loadMermaid_337403e14b224e1da2ee1318b8284b7d();\r\n",
+       "    };\r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    loadMermaid_337403e14b224e1da2ee1318b8284b7d();\r\n",
+       "}\r\n",
+       "\r\n",
+       "</script>\r\n",
+       "<div id=\"337403e14b224e1da2ee1318b8284b7d\"></div>\r\n",
+       "</div>\r\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Formatting.displayGraph sampleAdjacency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"background-color:white;\">\r\n",
+       "<script type=\"text/javascript\">\r\n",
+       "\r\n",
+       "loadMermaid_619af42a8e46455dae65d04496c57cbf = () => {\r\n",
+       " \r\n",
+       "        (require.config({ 'paths': { 'context': '1.0.252001', 'mermaidUri' : 'https://colombod.github.io/dotnet-interactive-cdn/extensionlab/1.0.252001/mermaid/mermaidapi', 'urlArgs': 'cacheBuster=c1495c2b464f430e8335b80d754676c9' }}) || require)(['mermaidUri'], (mermaid) => {\r\n",
+       "\r\n",
+       "            let renderTarget = document.getElementById('619af42a8e46455dae65d04496c57cbf');\r\n",
+       "            mermaid.render( \r\n",
+       "                'mermaid_619af42a8e46455dae65d04496c57cbf', \r\n",
+       "                `graph TD\n",
+       "    dr(dr) --- of(of)\n",
+       "    START --- KT{KT}\n",
+       "    sk(sk) --- yj(yj)\n",
+       "    START --- gb(gb)\n",
+       "    START --- of(of)\n",
+       "    END --- IJ{IJ}\n",
+       "    VT{VT} --- sk(sk)\n",
+       "    END --- sk(sk)\n",
+       "    VT{VT} --- km(km)\n",
+       "    END --- KT{KT}\n",
+       "    IJ{IJ} --- of(of)\n",
+       "    IJ{IJ} --- dr(dr)\n",
+       "    IJ{IJ} --- yj(yj)\n",
+       "    KT{KT} --- yj(yj)\n",
+       "    VT{VT} --- gb(gb)\n",
+       "    dr(dr) --- yj(yj)\n",
+       "    VT{VT} --- of(of)\n",
+       "    PZ{PZ} --- dr(dr)\n",
+       "    KT{KT} --- of(of)\n",
+       "    KT{KT} --- gb(gb)\n",
+       "    gb(gb) --- of(of)\n",
+       "    dr(dr) --- sk(sk)\n",
+       "    VT{VT} --- dr(dr)`, \r\n",
+       "                g => {\r\n",
+       "                    renderTarget.innerHTML = g \r\n",
+       "                });\r\n",
+       "        },\r\n",
+       "        (error) => {\r\n",
+       "            console.log(error);\r\n",
+       "        });\r\n",
+       "}\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
+       "        loadMermaid_619af42a8e46455dae65d04496c57cbf();\r\n",
+       "    };\r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    loadMermaid_619af42a8e46455dae65d04496c57cbf();\r\n",
+       "}\r\n",
+       "\r\n",
+       "</script>\r\n",
+       "<div id=\"619af42a8e46455dae65d04496c57cbf\"></div>\r\n",
+       "</div>\r\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Formatting.displayGraph actualAdjacency"
    ]
   },
   {
