--- a/notebooks/day02/puzzle_1.ipynb
+++ b/notebooks/day02/puzzle_1.ipynb
@@ -4,6 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day02/puzzle_1.ipynb)\n",
+        "\n",
         "#### Part One\n",
         "\n",
         "Unfortunately, the previously mentioned functions can only have one argument X, which forces us to modify some global state.\n",
