--- a/notebooks/day06/puzzle.ipynb
+++ b/notebooks/day06/puzzle.ipynb
@@ -9,7 +9,10 @@
    },
    "source": [
     "## Day 6: Lanternfish\n",
-    "[link](https://adventofcode.com/2021/day/6)"
+    "\n",
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day06/puzzle.ipynb)\n",
+    "\n",
+    "[Problem statement](https://adventofcode.com/2021/day/6)"
    ]
   },
   {
