--- a/notebooks/day12/puzzle.ipynb
+++ b/notebooks/day12/puzzle.ipynb
@@ -9,7 +9,10 @@
    },
    "source": [
     "## Day 12: Passage Pathing\n",
-    "[link](https://adventofcode.com/2021/day/12)"
+    "\n",
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day12/puzzle.ipynb)\n",
+    "\n",
+    "[Problem statement](https://adventofcode.com/2021/day/12)"
    ]
   },
   {
@@ -210,17 +213,6 @@
     "\"All adjacencies:\" |> display\n",
     "sampleAdjacency |> Array.map Formatting.formatNodePair |> display"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
