--- a/notebooks/day01/puzzle.ipynb
+++ b/notebooks/day01/puzzle.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "### Day 1: Sonar Sweep\n",
-    "[link](https://adventofcode.com/2021/day/1)"
+    "\n",
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day01/puzzle.ipynb)\n",
+    "\n",
+    "[Problem statement](https://adventofcode.com/2021/day/1)"
    ]
   },
   {
