--- a/notebooks/day02/puzzle_2.ipynb
+++ b/notebooks/day02/puzzle_2.ipynb
@@ -4,6 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day02/puzzle_2.ipynb)\n",
+        "\n",
         "#### Part Two\n",
         "\n",
         "In the same way define the state and functions with slight changes"
