--- a/notebooks/day13/puzzle.ipynb
+++ b/notebooks/day13/puzzle.ipynb
@@ -196,14 +196,53 @@
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
-     "language": "html"
+     "language": "fsharp"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<script src=\"../drawMatrix.mjs\"/>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>XPlot.Plotly.Interactive, 4.0.6</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<!DOCTYPE html>\r\n",
+       "<div style=\"width: 900px; height: 500px;\" id=\"54751970-8493-4207-87b5-74caa44bceb3\"></div><script type=\"text/javascript\">\r\n",
+       "\n",
+       "var renderPlotly = function() {\n",
+       "    var xplotRequire = require.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}}) || require;\n",
+       "    xplotRequire(['plotly'], function(Plotly) { \r\n",
+       "\n",
+       "            var data = [{\"type\":\"scatter\",\"x\":[3,23,15,10,0,5,20,5,31,0,30,25,10,25,35,25,8,17,11,30,31,32,28,36,26,30,5,15,26,35,13,38,6,22,30,15,27,0,20,15,22,15,21,5,5,20,18,13,0,37,20,30,15,38,35,22,12,0,5,28,7,16,3,30,32,10,12,27,37,35,35,35,2,1,12,25,10,7,0,33,36,1,23,2,10,20,10,6,20],\"y\":[2,5,1,2,5,5,3,4,0,2,0,2,0,4,1,1,0,5,2,3,2,2,1,3,0,1,3,2,5,2,5,1,2,4,4,5,5,3,4,3,3,4,2,2,1,0,5,0,4,3,1,2,0,2,0,1,4,1,0,4,2,5,1,5,0,1,1,0,0,3,5,4,3,0,3,3,3,0,0,0,0,3,0,0,5,2,4,0,5],\"mode\":\"markers\",\"marker\":{\"size\":18}}];\n",
+       "           var layout = {\"height\":140.0,\"margin\":{\"l\":0.0,\"r\":0.0,\"t\":0.0,\"b\":0.0},\"yaxis\":{\"autorange\":\"reversed\",\"_isSubplotObj\":true}};\n",
+       "           Plotly.newPlot('54751970-8493-4207-87b5-74caa44bceb3', data, layout);\n",
+       "        \r\n",
+       "});\n",
+       "};\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
+       "        renderPlotly();\r\n",
+       "    };\r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    renderPlotly();\r\n",
+       "}\r\n",
+       "\r\n",
+       "</script>\r\n"
       ]
      },
      "metadata": {},
@@ -211,90 +250,21 @@
     }
    ],
    "source": [
-    "<script src=\"../drawMatrix.mjs\"/>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "draw = (canvasId, points) => {\n",
-    "    var maxX = Math.max(...points.map(p => p.Item1))\n",
-    "    var maxY = Math.max(...points.map(p => p.Item2))\n",
-    "    var canvas = document.getElementById(canvasId);\n",
-    "    canvas.width = maxX * 5 + 5\n",
-    "    canvas.height = maxY * 5 + 5\n",
-    "    drawPoints(points, \"green\", canvas, 5);\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "html"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<canvas id=\"sampleFolded\"></canvas>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "<canvas id=\"sampleFolded\"></canvas>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "html"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<canvas id=\"actualFolded\"></canvas>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "<canvas id=\"actualFolded\"></canvas>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#!share --from fsharp sampleFolded\n",
-    "#!share --from fsharp actualFolded\n",
+    "#r \"nuget: XPlot.Plotly.Interactive, 4.0.6\"\n",
+    "open XPlot.Plotly\n",
     "\n",
-    "draw (\"sampleFolded\", sampleFolded)\n",
-    "draw (\"actualFolded\", actualFolded)"
+    "let styledLayout =\n",
+    "    Layout(\n",
+    "        height = 140,\n",
+    "        margin = Margin(b = 0, l = 0, t = 0, r = 0),\n",
+    "        yaxis =\n",
+    "            Yaxis(\n",
+    "                autorange = \"reversed\"\n",
+    "            )\n",
+    "    )\n",
+    "Scatter (x = (actualFolded |> Seq.map fst), y = (actualFolded |> Seq.map snd), mode = \"markers\", marker = Marker(size = 18))\n",
+    "|> Chart.Plot\n",
+    "|> Chart.WithLayout styledLayout"
    ]
   }
  ],
