day 15 - update xoposhiy link

--- a/notebooks/day15/puzzle.ipynb
+++ b/notebooks/day15/puzzle.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "[Problem statement](https://adventofcode.com/2021/day/15)\n",
     "\n",
-    "[Inspired](https://www.youtube.com/watch?v=7PIasj25RvQ) by [xoposhiy](https://github.com/xoposhiy/)"
+    "Inspired by [xoposhiy](https://github.com/xoposhiy/aoc/blob/main/2021/15-path-risk.py)"
    ]
   },
   {
