day 15 - slips fixed

--- a/notebooks/day15/puzzle.ipynb
+++ b/notebooks/day15/puzzle.ipynb
@@ -70,7 +70,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -104,14 +108,14 @@
     "        source1 |> Array2D.mapi (fun i j x1 -> f x1 source2.[i,j])\n",
     "let (...+) = Array2D.zip (+)\n",
     "\n",
-    "let step riskGrid ristTotalGrid = \n",
+    "let step riskGrid riskTotalGrid = \n",
     "    [\n",
-    "        ristTotalGrid\n",
-    "        riskGrid ...+ Array2D.shift1 1 inf ristTotalGrid\n",
-    "        riskGrid ...+ Array2D.shift1 -1 inf ristTotalGrid\n",
-    "        riskGrid ...+ Array2D.shift2 1 inf ristTotalGrid\n",
-    "        riskGrid ...+ Array2D.shift2 -1 inf ristTotalGrid\n",
-    "    ] |> List.reduce (Array2D.apply min)\n",
+    "        riskTotalGrid\n",
+    "        riskGrid ...+ Array2D.shift1 1 inf riskTotalGrid\n",
+    "        riskGrid ...+ Array2D.shift1 -1 inf riskTotalGrid\n",
+    "        riskGrid ...+ Array2D.shift2 1 inf riskTotalGrid\n",
+    "        riskGrid ...+ Array2D.shift2 -1 inf riskTotalGrid\n",
+    "    ] |> List.reduce (Array2D.zip min)\n",
     "\n",
     "let solve riskGrid demo = \n",
     "    let riskTotalGrid = Array2D.map (fun _ -> inf) riskGrid\n",
@@ -266,11 +270,7 @@
     "                        (candidate - 1) % 9 + 1\n",
     "                    )\n",
     "let sampleCaveX25 = x25 sampleCave\n",
-    "let actualCaveX25 = x25 actualCave\n",
-    "\n",
-    "Matrix.foldi\n",
-    "\n",
-    "\n"
+    "let actualCaveX25 = x25 actualCave\n"
    ]
   },
   {
@@ -281,17 +281,7 @@
      "language": "fsharp"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\">2914</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(solve sampleCaveX25 false).[^0, ^0]\n",
     "(solve actualCaveX25 false).[^0, ^0] // too slow"
