day 19 - enhance readme

--- a/notebooks/day19/puzzle.ipynb
+++ b/notebooks/day19/puzzle.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day19/puzzle.ipynb)\n",
     "\n",
-    "[Problem statement](https://adventofcode.com/2021/day/19)"
+    "[Problem statement](README.MD)"
    ]
   },
   {
