--- a/notebooks/day19/puzzle.ipynb
+++ b/notebooks/day19/puzzle.ipynb
@@ -10,9 +10,7 @@
    "source": [
     "## Day 19: Beacon Scanner\n",
     "\n",
-    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day19/puzzle.ipynb)\n",
-    "\n",
-    "[Problem statement](README.MD)"
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day19/puzzle.ipynb)"
    ]
   },
   {
