day 15 - output missed

--- a/notebooks/day15/puzzle.ipynb
+++ b/notebooks/day15/puzzle.ipynb
@@ -64,19 +64,8 @@
     "\n",
     "let inf = 99999999\n",
     "\n",
-    "Formatter.Register<int[,]>((fun v -> formatTable (fun el -> if (el >= inf) then \"∞\" else (string el)) v), \"text/html\")\n"
+    "Formatter.Register<int[,]>((fun v -> formatTable (fun el -> if (el >= inf) then \"∞\" else (string el)) v), \"text/html\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -270,7 +259,7 @@
     "                        (candidate - 1) % 9 + 1\n",
     "                    )\n",
     "let sampleCaveX25 = x25 sampleCave\n",
-    "let actualCaveX25 = x25 actualCave\n"
+    "let actualCaveX25 = x25 actualCave"
    ]
   },
   {
@@ -281,7 +270,17 @@
      "language": "fsharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">2914</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "(solve sampleCaveX25 false).[^0, ^0]\n",
     "(solve actualCaveX25 false).[^0, ^0] // too slow"
