--- a/notebooks/day03/puzzle_0_1_sample.ipynb
+++ b/notebooks/day03/puzzle_0_1_sample.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "### Day 3: Binary Diagnostic\n",
     "\n",
-    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day03/puzzle_0_1_sample.ipynb)\n",
-    "\n",
-    "[Problem statement](https://adventofcode.com/2021/day/3)"
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day03/puzzle_0_1_sample.ipynb)\n"
    ]
   },
   {
