--- a/notebooks/day11/puzzle.ipynb
+++ b/notebooks/day11/puzzle.ipynb
@@ -10,9 +10,7 @@
    "source": [
     "## Day 11: Dumbo Octopus\n",
     "\n",
-    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day11/puzzle.ipynb)\n",
-    "\n",
-    "[Problem statement](https://adventofcode.com/2021/day/11)"
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day11/puzzle.ipynb)\n"
    ]
   },
   {
