--- a/notebooks/day15/puzzle.ipynb
+++ b/notebooks/day15/puzzle.ipynb
@@ -8,9 +8,8 @@
     "\n",
     "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day15/puzzle.ipynb)\n",
     "\n",
-    "[Problem statement](https://adventofcode.com/2021/day/15)\n",
-    "\n",
-    "Inspired by [xoposhiy](https://github.com/xoposhiy/aoc/blob/main/2021/15-path-risk.py)"
+    "Inspired by:\\\n",
+    "[![xoposhiy](https://img.shields.io/badge/xoposhiy-aoc-100000?logo=github)](https://github.com/xoposhiy/aoc/blob/main/2021/15-path-risk.py)"
    ]
   },
   {
