--- a/notebooks/day17/puzzle.ipynb
+++ b/notebooks/day17/puzzle.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "## Day 17: Trick Shot\n",
     "\n",
-    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day17/puzzle.ipynb)\n",
-    "\n",
-    "[Problem statement](https://adventofcode.com/2021/day/17)"
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day17/puzzle.ipynb)"
    ]
   },
   {
