--- a/notebooks/day21/puzzle_2.ipynb
+++ b/notebooks/day21/puzzle_2.ipynb
@@ -8,11 +8,9 @@
     }
    },
    "source": [
-    "## Day 21: Trench Map\n",
+    "## Day 21: Dirac Dice\n",
     "\n",
-    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day21/puzzle.ipynb)\n",
-    "\n",
-    "[Problem statement](https://adventofcode.com/2021/day/21)"
+    "[![nbviewer](https://raw.githubusercontent.com/jupyter/design/master/logos/Badges/nbviewer_badge.svg)](https://nbviewer.org/github/mazharenko/AoC-2021/tree/HEAD/notebooks/day21/puzzle.ipynb)\n"
    ]
   },
   {
