switch to Microsoft.DotNet.Interactive.Mermaid as old ExtensionLab does not work with new kernel

--- a/notebooks/day12/puzzle.ipynb
+++ b/notebooks/day12/puzzle.ipynb
@@ -19,6 +19,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -39,6 +42,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -75,13 +81,16 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.DotNet.Interactive.ExtensionLab, 1.0.0-beta.21606.1</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.DotNet.Interactive.Mermaid, 1.0.0-beta.22405.1</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -89,7 +98,7 @@
     }
    ],
    "source": [
-    "#r \"nuget: Microsoft.DotNet.Interactive.ExtensionLab,1.0.0-beta.21606.1\""
+    "#r \"nuget: Microsoft.DotNet.Interactive.Mermaid,1.0.0-beta.22405.1\""
    ]
   },
   {
@@ -98,6 +107,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -116,12 +128,15 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
    "source": [
     "module Formatting =\n",
-    "    open Microsoft.DotNet.Interactive.ExtensionLab\n",
+    "    open Microsoft.DotNet.Interactive.Mermaid\n",
     "    let formatNode node =\n",
     "        match node with\n",
     "        | Start -> \"START\"\n",
@@ -164,6 +179,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -218,22 +236,25 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"background-color:white;\">\r\n",
+       "<div class=\"mermaidMarkdownContainer\" style=\"background-color:white\">\r\n",
        "<script type=\"text/javascript\">\r\n",
        "\r\n",
-       "loadMermaid_337403e14b224e1da2ee1318b8284b7d = () => {\r\n",
+       "loadMermaid_2bed97287032493c8eed7456d0f4b6b3 = () => {\r\n",
        " \r\n",
-       "        (require.config({ 'paths': { 'context': '1.0.252001', 'mermaidUri' : 'https://colombod.github.io/dotnet-interactive-cdn/extensionlab/1.0.252001/mermaid/mermaidapi', 'urlArgs': 'cacheBuster=c1495c2b464f430e8335b80d754676c9' }}) || require)(['mermaidUri'], (mermaid) => {\r\n",
+       "        (require.config({ 'paths': { 'context': '9.1.3', 'mermaidUri' : 'https://cdn.jsdelivr.net/npm/mermaid@9.1.3/dist/mermaid.min', 'urlArgs': 'cacheBuster=e63fd4fed1d149d3bf876fc6c0f9d748' }}) || require)(['mermaidUri'], (mermaid) => {\r\n",
        "\r\n",
-       "            let renderTarget = document.getElementById('337403e14b224e1da2ee1318b8284b7d');\r\n",
-       "            mermaid.render( \r\n",
-       "                'mermaid_337403e14b224e1da2ee1318b8284b7d', \r\n",
+       "            let renderTarget = document.getElementById('2bed97287032493c8eed7456d0f4b6b3');\r\n",
+       "            mermaid.mermaidAPI.render( \r\n",
+       "                'mermaid_2bed97287032493c8eed7456d0f4b6b3', \r\n",
        "                `graph TD\n",
        "    START --- A{A}\n",
        "    START --- b(b)\n",
@@ -258,17 +279,17 @@
        "    \r\n",
        "    \r\n",
        "    require_script.onload = function() {\r\n",
-       "        loadMermaid_337403e14b224e1da2ee1318b8284b7d();\r\n",
+       "        loadMermaid_2bed97287032493c8eed7456d0f4b6b3();\r\n",
        "    };\r\n",
        "\r\n",
        "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
        "}\r\n",
        "else {\r\n",
-       "    loadMermaid_337403e14b224e1da2ee1318b8284b7d();\r\n",
+       "    loadMermaid_2bed97287032493c8eed7456d0f4b6b3();\r\n",
        "}\r\n",
        "\r\n",
        "</script>\r\n",
-       "<div id=\"337403e14b224e1da2ee1318b8284b7d\"></div>\r\n",
+       "<div id=\"2bed97287032493c8eed7456d0f4b6b3\"></div>\r\n",
        "</div>\r\n"
       ]
      },
@@ -286,22 +307,25 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"background-color:white;\">\r\n",
+       "<div class=\"mermaidMarkdownContainer\" style=\"background-color:white\">\r\n",
        "<script type=\"text/javascript\">\r\n",
        "\r\n",
-       "loadMermaid_619af42a8e46455dae65d04496c57cbf = () => {\r\n",
+       "loadMermaid_fe6e23cfdb544b17ac83717bd5d655b4 = () => {\r\n",
        " \r\n",
-       "        (require.config({ 'paths': { 'context': '1.0.252001', 'mermaidUri' : 'https://colombod.github.io/dotnet-interactive-cdn/extensionlab/1.0.252001/mermaid/mermaidapi', 'urlArgs': 'cacheBuster=c1495c2b464f430e8335b80d754676c9' }}) || require)(['mermaidUri'], (mermaid) => {\r\n",
+       "        (require.config({ 'paths': { 'context': '9.1.3', 'mermaidUri' : 'https://cdn.jsdelivr.net/npm/mermaid@9.1.3/dist/mermaid.min', 'urlArgs': 'cacheBuster=e63fd4fed1d149d3bf876fc6c0f9d748' }}) || require)(['mermaidUri'], (mermaid) => {\r\n",
        "\r\n",
-       "            let renderTarget = document.getElementById('619af42a8e46455dae65d04496c57cbf');\r\n",
-       "            mermaid.render( \r\n",
-       "                'mermaid_619af42a8e46455dae65d04496c57cbf', \r\n",
+       "            let renderTarget = document.getElementById('fe6e23cfdb544b17ac83717bd5d655b4');\r\n",
+       "            mermaid.mermaidAPI.render( \r\n",
+       "                'mermaid_fe6e23cfdb544b17ac83717bd5d655b4', \r\n",
        "                `graph TD\n",
        "    dr(dr) --- of(of)\n",
        "    START --- KT{KT}\n",
@@ -342,17 +366,17 @@
        "    \r\n",
        "    \r\n",
        "    require_script.onload = function() {\r\n",
-       "        loadMermaid_619af42a8e46455dae65d04496c57cbf();\r\n",
+       "        loadMermaid_fe6e23cfdb544b17ac83717bd5d655b4();\r\n",
        "    };\r\n",
        "\r\n",
        "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
        "}\r\n",
        "else {\r\n",
-       "    loadMermaid_619af42a8e46455dae65d04496c57cbf();\r\n",
+       "    loadMermaid_fe6e23cfdb544b17ac83717bd5d655b4();\r\n",
        "}\r\n",
        "\r\n",
        "</script>\r\n",
-       "<div id=\"619af42a8e46455dae65d04496c57cbf\"></div>\r\n",
+       "<div id=\"fe6e23cfdb544b17ac83717bd5d655b4\"></div>\r\n",
        "</div>\r\n"
       ]
      },
@@ -370,6 +394,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -397,6 +424,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -416,6 +446,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -440,6 +473,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -464,6 +500,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -486,6 +525,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -512,6 +554,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
